WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103438
No need for ExceptionCode in HTMLMediaElement::load
https://bugs.webkit.org/show_bug.cgi?id=103438
Summary
No need for ExceptionCode in HTMLMediaElement::load
Dean Jackson
Reported
2012-11-27 10:42:18 PST
The ExceptionCode& parameter is never used. The HTML5 spec indicates all errors in load() are communicated via error objects.
http://dev.w3.org/html5/spec/media-elements.html#dom-media-load
Attachments
Patch
(3.87 KB, patch)
2012-11-27 10:52 PST
,
Dean Jackson
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2012-11-27 10:52:29 PST
Created
attachment 176301
[details]
Patch
Dean Jackson
Comment 2
2012-11-27 11:22:46 PST
Committed
r135886
: <
http://trac.webkit.org/changeset/135886
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug